--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Alphabot-Md",
+  "name": "BOT AMDTOPUP-Md",
   "version": "1.1.4",
-  "description": "Alphabot Md, Only update in YouTube ZEEONE OFC",
+  "description": "BOT AMDTOPUP Md, Website Topup Games Murah hanya di www.amdtopup.com",
   "main": "zeeone.js",
   "license": "MIT",
   "scripts": {
